[master] fixed visibility issue in user profile when adding too much comments

--- a/Sprint2/src/main/webapp/styles/style.css
+++ b/Sprint2/src/main/webapp/styles/style.css
@@ -183,7 +183,7 @@ h2 {
 	margin: 0 auto;
 	background: url(../img/container_background.png);
 	box-shadow: 0px 0px 100px #000;
-	height: 100%;
+	min-height: 100%;
 	padding: 40px;
 }
 
